--- a/src/css/tabs/receiver.less
+++ b/src/css/tabs/receiver.less
@@ -317,20 +317,6 @@
 		stroke-width: 2px;
 		fill: none;
 	}
-	.axis {
-		line {
-			fill: none;
-			stroke: #ccc;
-			stroke-width: 1px;
-			shape-rendering: crispEdges;
-		}
-		path {
-			fill: none;
-			stroke: #ccc;
-			stroke-width: 1px;
-			shape-rendering: crispEdges;
-		}
-	}
 	text {
 		stroke: none;
 		fill: var(--text);
